--- a/Application/.classpath
+++ b/Application/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Korisnik/eclipse/InzenjeringZnanja/Application/lib/jCOLIBRI-3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Korisnik/eclipse/InzenjeringZnanja/Application/lib/log4j-api-2.11.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Korisnik/Desktop/New folder/InzenjeringZnanja/Application/lib/jCOLIBRI-3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Korisnik/Desktop/New folder/InzenjeringZnanja/Application/lib/log4j-api-2.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
